# verus-fractals

./: Cargo.toml  README.md
src/: bla.rs  bla_kernels.rs  coloring.rs  complex.rs  deep_zoom.rs  fractal.rs  lib.rs  mandelbrot.rs  mandelbrot_stage.rs  orbit.rs  perturbation.rs  perturbation_proofs.rs  rational_perturbation.rs  renderer.rs  runtime_perturbation.rs  series_approximation.rs  viewport.rs
src/runtime/: complex.rs  fractal.rs  mod.rs  viewport.rs
